Add priorityClassName to avoid eviction

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -30,6 +30,7 @@ spec:
         app: {{ template "rancher.fullname" . }}
         release: {{ .Release.Name }}
     spec:
+      priorityClassName: {{ .Values.priorityClassName }}
       serviceAccountName: {{ template "rancher.fullname" . }}
 {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
