--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -59,6 +59,7 @@ ingress:
   enabled: true
   includeDefaultExtraAnnotations: true
   extraAnnotations: {}
+  # ingressClassName: ingress
 
   # configurationSnippet - Add additional Nginx configuration. This example statically sets a header on the ingress.
   # configurationSnippet: |
