--- a/pkg/crds/provisioningv2/capi-webhooks.yaml
+++ b/pkg/crds/provisioningv2/capi-webhooks.yaml
@@ -11,7 +11,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: cattle-system
-      path: /mutate-cluster-x-k8s-io-v1alpha4-cluster
+      path: /mutate-cluster-x-k8s-io-v1beta1-cluster
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.cluster.cluster.x-k8s.io
@@ -19,7 +19,7 @@ webhooks:
   - apiGroups:
     - cluster.x-k8s.io
     apiVersions:
-    - v1alpha4
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -33,7 +33,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: cattle-system
-      path: /mutate-cluster-x-k8s-io-v1alpha4-machine
+      path: /mutate-cluster-x-k8s-io-v1beta1-machine
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.machine.cluster.x-k8s.io
@@ -41,7 +41,7 @@ webhooks:
   - apiGroups:
     - cluster.x-k8s.io
     apiVersions:
-    - v1alpha4
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -55,7 +55,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: cattle-system
-      path: /mutate-cluster-x-k8s-io-v1alpha4-machinedeployment
+      path: /mutate-cluster-x-k8s-io-v1beta1-machinedeployment
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.machinedeployment.cluster.x-k8s.io
@@ -63,7 +63,7 @@ webhooks:
   - apiGroups:
     - cluster.x-k8s.io
     apiVersions:
-    - v1alpha4
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -77,7 +77,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: cattle-system
-      path: /mutate-cluster-x-k8s-io-v1alpha4-machinehealthcheck
+      path: /mutate-cluster-x-k8s-io-v1beta1-machinehealthcheck
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.machinehealthcheck.cluster.x-k8s.io
@@ -85,7 +85,7 @@ webhooks:
   - apiGroups:
     - cluster.x-k8s.io
     apiVersions:
-    - v1alpha4
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -99,7 +99,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: cattle-system
-      path: /mutate-cluster-x-k8s-io-v1alpha4-machineset
+      path: /mutate-cluster-x-k8s-io-v1beta1-machineset
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.machineset.cluster.x-k8s.io
@@ -107,7 +107,7 @@ webhooks:
   - apiGroups:
     - cluster.x-k8s.io
     apiVersions:
-    - v1alpha4
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -121,7 +121,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: cattle-system
-      path: /mutate-exp-cluster-x-k8s-io-v1alpha4-machinepool
+      path: /mutate-exp-cluster-x-k8s-io-v1beta1-machinepool
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.exp.machinepool.cluster.x-k8s.io
@@ -129,7 +129,7 @@ webhooks:
   - apiGroups:
     - exp.cluster.x-k8s.io
     apiVersions:
-    - v1alpha4
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -143,7 +143,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: cattle-system
-      path: /mutate-addons-cluster-x-k8s-io-v1alpha4-clusterresourceset
+      path: /mutate-addons-cluster-x-k8s-io-v1beta1-clusterresourceset
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.clusterresourceset.addons.cluster.x-k8s.io
@@ -151,7 +151,7 @@ webhooks:
   - apiGroups:
     - addons.cluster.x-k8s.io
     apiVersions:
-    - v1alpha4
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -172,7 +172,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: cattle-system
-      path: /validate-cluster-x-k8s-io-v1alpha4-cluster
+      path: /validate-cluster-x-k8s-io-v1beta1-cluster
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.cluster.cluster.x-k8s.io
@@ -180,7 +180,7 @@ webhooks:
   - apiGroups:
     - cluster.x-k8s.io
     apiVersions:
-    - v1alpha4
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -194,7 +194,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: cattle-system
-      path: /validate-cluster-x-k8s-io-v1alpha4-machine
+      path: /validate-cluster-x-k8s-io-v1beta1-machine
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.machine.cluster.x-k8s.io
@@ -202,7 +202,7 @@ webhooks:
   - apiGroups:
     - cluster.x-k8s.io
     apiVersions:
-    - v1alpha4
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -216,7 +216,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: cattle-system
-      path: /validate-cluster-x-k8s-io-v1alpha4-machinedeployment
+      path: /validate-cluster-x-k8s-io-v1beta1-machinedeployment
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.machinedeployment.cluster.x-k8s.io
@@ -224,7 +224,7 @@ webhooks:
   - apiGroups:
     - cluster.x-k8s.io
     apiVersions:
-    - v1alpha4
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -238,7 +238,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: cattle-system
-      path: /validate-cluster-x-k8s-io-v1alpha4-machinehealthcheck
+      path: /validate-cluster-x-k8s-io-v1beta1-machinehealthcheck
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.machinehealthcheck.cluster.x-k8s.io
@@ -246,7 +246,7 @@ webhooks:
   - apiGroups:
     - cluster.x-k8s.io
     apiVersions:
-    - v1alpha4
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -260,7 +260,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: cattle-system
-      path: /validate-cluster-x-k8s-io-v1alpha4-machineset
+      path: /validate-cluster-x-k8s-io-v1beta1-machineset
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.machineset.cluster.x-k8s.io
@@ -268,7 +268,7 @@ webhooks:
   - apiGroups:
     - cluster.x-k8s.io
     apiVersions:
-    - v1alpha4
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -282,7 +282,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: cattle-system
-      path: /validate-exp-cluster-x-k8s-io-v1alpha4-machinepool
+      path: /validate-exp-cluster-x-k8s-io-v1beta1-machinepool
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.exp.machinepool.cluster.x-k8s.io
@@ -290,7 +290,7 @@ webhooks:
   - apiGroups:
     - exp.cluster.x-k8s.io
     apiVersions:
-    - v1alpha4
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
@@ -304,7 +304,7 @@ webhooks:
     service:
       name: webhook-service
       namespace: cattle-system
-      path: /validate-addons-cluster-x-k8s-io-v1alpha4-clusterresourceset
+      path: /validate-addons-cluster-x-k8s-io-v1beta1-clusterresourceset
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.clusterresourceset.addons.cluster.x-k8s.io
@@ -312,7 +312,7 @@ webhooks:
   - apiGroups:
     - addons.cluster.x-k8s.io
     apiVersions:
-    - v1alpha4
+    - v1beta1
     operations:
     - CREATE
     - UPDATE
