--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -153,7 +153,8 @@ spec:
         - mountPath: /var/log/auditlog
           name: audit-log
 {{- end }}
-{{- if gt (int .Values.auditLog.level) 0 }}
+{{- if eq .Values.auditLog.destination "sidecar" }}
+  {{- if gt (int .Values.auditLog.level) 0 }}
       # Make audit logs available for Rancher log collector tools.
       - image: {{ .Values.busyboxImage }}
         imagePullPolicy: {{ default "IfNotPresent" .Values.busyboxImagePullPolicy }}
@@ -163,6 +164,7 @@ spec:
         volumeMounts:
         - mountPath: /var/log/auditlog
           name: audit-log
+  {{- end }}
 {{- end }}
       volumes:
 {{- if .Values.additionalTrustedCAs }}
