--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -43,6 +43,7 @@ ENV HELM_VERSION v3.7.1
 ENV KUSTOMIZE_VERSION v3.10.0
 ENV CATTLE_SYSTEM_AGENT_VERSION v0.1.1
 ENV CATTLE_SYSTEM_AGENT_UPGRADE_IMAGE rancher/system-agent:${CATTLE_SYSTEM_AGENT_VERSION}-suc
+ENV CATTLE_SYSTEM_UPGADE_CONTROLLER_CHART_VERSION 100.0.1+up0.3.1
 
 # System charts minimal version
 ENV CATTLE_FLEET_MIN_VERSION=100.0.2+up0.3.8
