Add k3s_root as K3S_BUILDER in drone publish step for s390x

--- a/.drone.yml
+++ b/.drone.yml
@@ -687,6 +687,7 @@ steps:
     build_args:
     - ARCH=s390x
     - "VERSION=${DRONE_TAG}"
+    - K3S_BUILDER=k3s_root
     context: package/
     custom_dns: 1.1.1.1
     dockerfile: package/Dockerfile
