--- a/.drone.yml
+++ b/.drone.yml
@@ -563,7 +563,17 @@ platform:
 node:
   arch: s390x
 
+clone:
+  disable: true
+
 steps:
+- name: clone
+  image: alpine/git:v2.30.2-s390x
+  commands:
+  - git clone $DRONE_GIT_HTTP_URL  .
+  - git fetch origin $DRONE_COMMIT_REF
+  - git checkout $DRONE_COMMIT -b origin/$DRONE_TARGET_BRANCH
+
 - name: build
   image: rancher/dapper:v0.5.8
   failure: ignore
@@ -590,7 +600,7 @@ steps:
     - tag
 
 - name: docker-publish-head
-  image: rancher/drone-docker-image-digests:v0.0.13
+  image: rancher/drone-images:docker-s390x
   failure: ignore
   volumes:
   - name: docker
@@ -1385,9 +1395,19 @@ platform:
 node:
   arch: s390x
 
+clone:
+  disable: true
+
 steps:
+- name: clone
+  image: alpine/git:v2.30.2-s390x
+  commands:
+  - git clone $DRONE_GIT_HTTP_URL  .
+  - git fetch origin $DRONE_COMMIT_REF
+  - git checkout $DRONE_COMMIT -b origin/$DRONE_TARGET_BRANCH
+
 - name: docker-image-digests
-  image: rancher/drone-docker-digests:s390x
+  image: rancher/drone-docker-image-digests:v0.0.13
   failure: ignore
   environment:
     PLUGIN_GITHUB_REPOSITORY: "rancher/rancher"
@@ -1418,6 +1438,7 @@ trigger:
     - promote
 
 depends_on:
+- default-linux-amd64
 - default-linux-s390x
 ---
 kind: pipeline
