update drone logic in fossa step

--- a/.drone.yml
+++ b/.drone.yml
@@ -103,6 +103,7 @@ steps:
       include:
         - "refs/heads/master"
         - "refs/heads/release/v*"
+        - "refs/tags/v*"
     event:
       - push
       - tag
