--- a/.drone.yml
+++ b/.drone.yml
@@ -905,7 +905,7 @@ steps:
     pull: always
     image: rancher/dapper:v0.5.8
     commands:
-      - dapper.exe -f Dockerfile-windows.dapper -d ci
+      - dapper.exe -f Dockerfile-windows-20h2.dapper -d ci
     volumes:
       - name: docker_pipe
         path: \\\\.\\pipe\\docker_engine
