--- a/Dockerfile-windows-20h2.dapper
+++ b/Dockerfile-windows-20h2.dapper
@@ -1,4 +1,4 @@
-FROM library/golang:1.17.7
+FROM rancher/golang:1.17-windowsservercore-20H2
 SHELL ["powershell", "-NoLogo", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
 ARG DAPPER_HOST_ARCH
