--- a/package/Dockerfile.agent
+++ b/package/Dockerfile.agent
@@ -2,10 +2,10 @@ ARG RANCHER_TAG=dev
 ARG RANCHER_REPO=rancher
 FROM ${RANCHER_REPO}/rancher:${RANCHER_TAG} as rancher
 
-FROM registry.suse.com/suse/sle15:15.3
+FROM registry.suse.com/bci/golang:1.17
 ARG ARCH=amd64
 
-ENV KUBECTL_VERSION v1.21.3
+ENV KUBECTL_VERSION v1.23.3
 RUN zypper -n install --no-recommends curl ca-certificates jq git-core hostname iproute2 vim-small less \
 	bash-completion acl openssh-clients tar gzip xz gawk sysstat && \
     zypper -n clean -a && rm -rf /tmp/* /var/tmp/* /usr/share/doc/packages/* && \
