Adding podAnnotations to rancher pods
Signed-off-by: Greg Sidelinger <gate@ilive4code.net>

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -122,6 +122,10 @@ useBundledSystemChart: false
 certmanager: 
   version: ""
 
+# annotations to add to the pod container metadata
+podAnnotations: {}
+  # annotation: value
+
 # Rancher custom logos persistence
 customLogos:
   enabled: false
