Prefer stable cert-manager apiversion
Use the stable v1 apiversion for cert-manager issuer when available

--- a/chart/tests/issuer_test.yaml
+++ b/chart/tests/issuer_test.yaml
@@ -91,7 +91,10 @@ tests:
   - hasDocuments:
       count: 1
     template: issuer-rancher.yaml
-- it: should set letsEncrypt apiVersion with default cert-manager
+- it: should set letsEncrypt apiVersion with cert-manager >= 1.0.0 using capabilities
+  capabilities:
+    apiversions:
+    - cert-manager.io/v1
   set:
     ingress.tls.source: letsEncrypt
   asserts:
