--- a/tests/integration/requirements.txt
+++ b/tests/integration/requirements.txt
@@ -11,6 +11,6 @@ pyyaml==5.1
 netaddr==0.7.19
 requests==2.21.0
 kubernetes==12.0.1
-jinja2>=2.10
+jinja2===3.0.3
 cryptography==2.6.1
 itsdangerous==2.0.1
