--- a/chart/templates/secret.yaml
+++ b/chart/templates/secret.yaml
@@ -15,6 +15,10 @@ kind: Secret
 metadata:
   name: "bootstrap-secret"
   namespace: {{ .Release.Namespace }}
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-weight": "-5"
+    "helm.sh/resource-policy": keep
 type: Opaque
 data:
   bootstrapPassword: {{ $bootstrapPassword | b64enc | quote }}
