Add optional ingressClassName support to Rancher helm chart
Even though ingressClassName is an optional field, some ingress controllers are only watching ingresses with a certain ingressClassName and skip ingresses without. For example the upstream ingress-nginx which by default sets `controller.watchIngressWithoutClass=false`.

Addresses https://github.com/rancher/rancher/issues/37193

Signed-off-by: Bastian Hofmann <bashofmann@gmail.com>

--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -36,6 +36,9 @@ metadata:
 {{ toYaml .Values.ingress.extraAnnotations | indent 4 }}
 {{- end }}
 spec:
+  {{- if .Values.ingress.ingressClassName }}
+  ingressClassName: {{ .Values.ingress.ingressClassName }}
+  {{- end }}
   rules:
   - host: {{ .Values.hostname }}  # hostname to access rancher server
     http:
