feat: allow using another bootstrap password existing secret

--- a/chart/templates/secret.yaml
+++ b/chart/templates/secret.yaml
@@ -1,6 +1,9 @@
 {{/* Use the bootstrap password from values.yaml if an existing secret is not found */}}
 {{- $bootstrapPassword := .Values.bootstrapPassword -}}
 {{- $existingSecret := lookup "v1" "Secret" .Release.Namespace "bootstrap-secret" -}}
+{{- if .Values.bootstrapPasswordExistingSecret -}}
+    {{- $existingSecret := lookup "v1" "Secret" .Release.Namespace .Value.bootstrapPasswordExistingSecret -}}
+{{- end -}}
 {{- if $existingSecret -}}
     {{- if $existingSecret.data -}}
         {{- if $existingSecret.data.bootstrapPassword -}}
